lox-tests/tests/field/set_on_bool.stderr
ERROR: Only class instances have fields, not objects of type boolean
 --> 1:1
  |
1 | true.foo = "value"; // expect runtime error: Only instances have fields.
  | ^------^
